# extraerInfoTexto

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: api_handler.py
src/extractor/: extractor.py  get_model.py  models.py  security.py  servicios.py
